# biorag

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: fbfed1035d41_create_documents_and_chunks_tables.py
api/: main.py
db/: base.py  models.py
generation/: generator.py
generation/prompts/: system_prompt.txt
guardrails/: confidence.py  input_guardrail.py
ingestion/: chunker.py  embedder.py  pdf_parser.py  pipeline.py
retrieval/: query_rewriter.py  reranker.py  retriever.py
tests/integration/: test_api.py  test_pipeline.py  test_retriever.py
tests/unit/: test_api.py  test_chunker.py  test_confidence.py  test_generator.py  test_input_guardrail.py  test_pdf_parser.py  test_query_rewriter.py  test_reranker.py  test_retriever.py
ui/: app.py
